# flip

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SPEC.md  VISION.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: internals.md  obsidian.md  okf-provenance-profile.md  quickstart.md  wiki-alignment.md
spindle/channels/system/system/claude/: channel.toml
spindle/distributions/flip-core/: preempt.md  pyproject.toml
spindle/distributions/flip-core/flip_core/: __init__.py
spindle/doctrine/: doctrine.toml
src/flip/: __init__.py  beat.py  claims.py  cli.py  doctor.py  export.py  fetch.py  importer.py  integrations.py  ledgers.py  manifest.py  migrate.py  obsidian.py  okf.py  pages.py  profiles.py  query.py  registry.py  rename.py  resolve.py  scaffold.py  sessions.py  sources.py  spindle-package.toml  util.py  views.py  workspace.py
src/flip/obsidian_plugin/: main.js  manifest.json  styles.css
src/flip/profiles/: data-investigation.toml  engagement.toml  ledger.toml  research-review.toml  scout.toml
src/flip/skills/notebook-audit/: SKILL.md
src/flip/skills/notebook-create/: SKILL.md
src/flip/skills/notebook-handoff/: SKILL.md
src/flip/skills/notebook-lessons/: SKILL.md
src/flip/skills/notebook-log/: SKILL.md
src/flip/skills/notebook-source/: SKILL.md
tests/: test_beat.py  test_claims.py  test_cli.py  test_doctor.py  test_export.py  test_fetch.py  test_import.py  test_integrations.py  test_ledgers.py  test_manifest.py  test_migrate.py  test_obsidian.py  test_okf.py  test_pages.py  test_query.py  test_refs.py  test_registry.py  test_rename.py  test_resolve.py  test_scaffold.py  test_sessions.py  test_sources.py  test_spindle_package.py  test_views.py  test_workspace.py
