[project]
name = "flip-core"
version = "0.1.0"
description = "flip notebook skills as a spindle distribution"
requires-python = ">=3.11"
dependencies = ["flip-notebook==0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flip_core"]

[tool.spindle.distribution]
display_name = "Flip Core"
description = "Reporter's-notebook skills: capture, grade, claim, audit, hand off, distill."
source_dir = "../../"
preempt_snippet = "preempt.md"
home_url = "https://github.com/lavallee/flip/tree/main/spindle"
